--- a/UI/package.json
+++ b/UI/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
