--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "SenseAI assignment backend",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon --exec babel-node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rahul ck",
@@ -24,10 +25,6 @@
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.1",
-    "@babel/node": "^7.22.6",
-    "@babel/preset-env": "^7.22.9",
     "nodemon": "^3.0.1"
   }
 }
